objects/CopilotUtteranceAnalysis__dll.object
<CustomObject>
    <fields>
        <fullName>BotId__c</fullName>
        <label>Bot Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BotName__c</fullName>
        <label>Bot Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryId__c</fullName>
        <label>Category ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <label>Category Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClusterId__c</fullName>
        <label>Cluster ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClusterName__c</fullName>
        <label>Cluster Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KQ_RequestId__c</fullName>
        <label>KQ_RequestId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestId__c</fullName>
        <label>Request ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>Session ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopicRelevance__c</fullName>
        <label>Topic Relevance</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TurnId__c</fullName>
        <label>Turn ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>User ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>